objects/Personal_Coach__c.object
<CustomObject>
    <description>TCS Personal Coaching</description>
    <fields>
        <fullName>APM_call_outcome__c</fullName>
        <label>Did YP accept offer of Personal Coaching</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YP does not want coaching</fullName>
                </value>
                <value>
                    <fullName>Selected for referral elsewhere</fullName>
                </value>
                <value>
                    <fullName>Selected for TCN coaching</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to the YP&apos;s Personal Coach Champion</description>
        <inlineHelpText>Link to the YP&apos;s Personal Coach Champion</inlineHelpText>
        <label>Zonal Champion</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>User does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>$User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <infoMessage>Search for the name of the person who is the Champion</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Personal_Coaching_Champion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coach_TCS_Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the Personal Coach is a TCS Mentor, please add them here.</inlineHelpText>
        <label>Coach (TCS Mentor)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>TCS Mentor 2012, Summer staff</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Personal Coaching (Coach (TCS Mentor))</relationshipLabel>
        <relationshipName>Personal_Coaching_TCS_Mentor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to the YP&apos;s coach</description>
        <inlineHelpText>Link to the YP&apos;s coach</inlineHelpText>
        <label>Coach</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Personal_Coaching</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coaching_end_date__c</fullName>
        <description>Date coaching period is scheduled to end</description>
        <inlineHelpText>Date coaching period is scheduled to end</inlineHelpText>
        <label>Suggested date of last meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coaching_start_date__c</fullName>
        <description>Date coaching period is scheduled to start</description>
        <inlineHelpText>Date coaching period is scheduled to start</inlineHelpText>
        <label>Did the YP and coach meet at RCA 4?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conclusion_summary__c</fullName>
        <inlineHelpText>Please write a couple of paragraphs to summarise whether the YP has reached their goals, and on what skills they have gained</inlineHelpText>
        <label>Conclusion summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_YP_was_referred_elsewhere__c</fullName>
        <inlineHelpText>Enter date when YP was referred elsewhere</inlineHelpText>
        <label>Date YP was referred elsewhere</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_first_meeting_after_RCA_4__c</fullName>
        <label>Date of first meeting after RCA 4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_of_YP__c</fullName>
        <description>Email of YP, pulled through from Contact</description>
        <formula>Young_person__r.Email</formula>
        <inlineHelpText>Email address of YP (as it appears on their Contact record)</inlineHelpText>
        <label>Email of YP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_of_coach__c</fullName>
        <label>Email of coach</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Goal_3_personal_steps__c</fullName>
        <description>Long text field for capturing the YP&apos;s 3 steps towards their goal</description>
        <inlineHelpText>Please summarise the YP&apos;s 3 steps towards their goal</inlineHelpText>
        <label>Personal Goal: 3 steps</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_TCS__c</fullName>
        <description>TCS goal, auto-populated by formula</description>
        <formula>&quot;To complete 24 hours of TCS involvement&quot;</formula>
        <inlineHelpText>The YP&apos;s TCS goal (all YP have this same goal)</inlineHelpText>
        <label>TCS Goal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_desciption__c</fullName>
        <description>Long text field for description of the YP&apos;s goal</description>
        <inlineHelpText>Please describe the YP&apos;s goal</inlineHelpText>
        <label>Personal Goal: description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meetings_attended__c</fullName>
        <label>Meetings attended</label>
        <summaryFilterItems>
            <field>Personal_Coach_Meetings__c.Meeting_attendance__c</field>
            <operation>equals</operation>
            <value>Attended</value>
        </summaryFilterItems>
        <summaryForeignKey>Personal_Coach_Meetings__c.Personal_Coaching__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Meetings_not_attended__c</fullName>
        <label>Meetings not attended</label>
        <summaryFilterItems>
            <field>Personal_Coach_Meetings__c.Meeting_attendance__c</field>
            <operation>equals</operation>
            <value>Did not attend</value>
        </summaryFilterItems>
        <summaryForeignKey>Personal_Coach_Meetings__c.Personal_Coaching__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Meetings_scheduled__c</fullName>
        <label>Meetings scheduled</label>
        <summaryForeignKey>Personal_Coach_Meetings__c.Personal_Coaching__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mobile_phone_of_Coach__c</fullName>
        <description>Mobile number of Coach, pulled from their User record</description>
        <formula>IF(ISBLANK( Coach__c ), Coach_TCS_Mentor__r.MobilePhone,  Coach__r.Phone)</formula>
        <inlineHelpText>Mobile number of Coach (as it appears on their Salesforce User record)</inlineHelpText>
        <label>Mobile phone of Coach</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_phone_of_YP__c</fullName>
        <description>Mobile of YP, pulled from Contact record</description>
        <formula>Young_person__r.MobilePhone</formula>
        <inlineHelpText>YP&apos;s mobile phone number (as it appears on their Contact record)</inlineHelpText>
        <label>Mobile phone of YP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_of_referral_elsewhere__c</fullName>
        <description>Text notes of YP&apos;s referral elsewhere</description>
        <inlineHelpText>Please enter notes of YP&apos;s referral elsewhere</inlineHelpText>
        <label>Notes of referral elsewhere</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RCA_Offer_Status__c</fullName>
        <label>RCA Offer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Offer at RCA 1 (1st choice)</fullName>
                </value>
                <value>
                    <fullName>Offer at RCA 2 (backup)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step_1_achieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step 1 achieved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Step_2_achieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step 2 achieved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Step_3_achieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step 3 achieved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wave__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wave</label>
        <referenceTo>Wave__c</referenceTo>
        <relationshipLabel>Personal Coaching</relationshipLabel>
        <relationshipName>Personal_Coaching</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Why_1_of_the_6__c</fullName>
        <label>Benefit to YP from Personal Coaching</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1_of_6__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1 of 6?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X6_monthly_end_of_period_revew__c</fullName>
        <inlineHelpText>What goals have been achieved?</inlineHelpText>
        <label>End of Coaching Review</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching to end as planned</fullName>
                </value>
                <value>
                    <fullName>YP has withdrawn from coaching</fullName>
                </value>
                <value>
                    <fullName>New coaching period has been agreed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YP_s_coaching_preferences__c</fullName>
        <label>YP&apos;s coaching preferences</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Young_person__c</fullName>
        <description>Master-detail link to YP being coached</description>
        <inlineHelpText>Link to the young person being coached</inlineHelpText>
        <label>Young person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Personal Coaching</relationshipLabel>
        <relationshipName>Personal_Coaching</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Personal Coach</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Young_person__c</columns>
        <columns>Wave__c</columns>
        <columns>NAME</columns>
        <columns>Champion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Champion__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>APM_call_outcome__c</field>
            <operation>equals</operation>
            <value>Selected for TCN coaching</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P#{000000}</displayFormat>
        <label>Personal Coach Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personal Coaching</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>